@@ -3388,10 +3388,7 @@ if [ $CROSS = false ] ; then
     # NB: we link clisp.rc into the driver clisp.exe but _not_ into the
     #     run-time lisp.exe because then the latter does not have an icon
     #     and the users are less likely to run it without the memory image
-    echol "clisp.rc : Makefile"
-    echotab 'echo "#include <windows.h>" > clisp.rc'
-    echotab 'echo "MAINICON ICON \"clisp.ico\"" >> clisp.rc'
-    echotab 'echo "VS_VERSION_INFO VERSIONINFO" >> clisp.rc'
+    echol "clisp.rc : ${SRCDIR}clisp.rc.in Makefile"
     PRODUCTVERSION=`echo ${VERSION_NUMBER} | sed -e 's/\./,/' -e 's/\+/,1/g'`
     if [ "${with_debug}" != no ]
     then FILEFLAGS="VS_FF_DEBUG|"
@@ -3407,26 +3404,12 @@ if [ $CROSS = false ] ; then
     then CHARSET=04B0           # Unicode
     else CHARSET=0000           # 7-bit ASCII
     fi
-    echotab 'echo "PRODUCTVERSION '${PRODUCTVERSION}'" >> clisp.rc'
-    echotab 'echo "FILEVERSION '${PRODUCTVERSION}'" >> clisp.rc'
-    echotab 'echo "FILEFLAGS ('${FILEFLAGS}')" >> clisp.rc'
-    echotab 'echo "BEGIN" >> clisp.rc'
-    echotab 'echo " BLOCK \"StringFileInfo\"" >> clisp.rc'
-    echotab 'echo " BEGIN" >> clisp.rc'
-    echotab 'echo "  BLOCK \"0409'${CHARSET}'\"" >> clisp.rc' # US english
-    echotab 'echo "  BEGIN" >> clisp.rc'
-    echotab 'echo "   VALUE \"CompanyName\", \"GNU\"" >> clisp.rc'
-    echotab 'echo "   VALUE \"ProductName\", \"$(PACKAGE_NAME)\"" >> clisp.rc'
-    echotab 'echo "   VALUE \"ProductVersion\", \"$(PACKAGE_VERSION)\"" >> clisp.rc'
-    echotab 'echo "   VALUE \"Version\", \"$(PACKAGE_VERSION)\"" >> clisp.rc'
-    echotab 'echo "   VALUE \"LegalCopyright\", \"GNU General Public License v2\"" >> clisp.rc'
-    echotab 'echo "  END" >> clisp.rc'
-    echotab 'echo " END" >> clisp.rc'
-    echotab 'echo " BLOCK \"VarFileInfo\"" >> clisp.rc'
-    echotab 'echo " BEGIN" >> clisp.rc'
-    echotab 'echo " VALUE \"Translation\", 0x409, 0x'${CHARSET}'" >> clisp.rc'
-    echotab 'echo " END" >> clisp.rc'
-    echotab 'echo "END" >> clisp.rc'
+    echotab "sed -e 's/\@CLISP_PRODUCTVERSION\@/${PRODUCTVERSION}/g' \\"
+    echotab "    -e 's/\@CLISP_FILEFLAGS\@/${FILEFLAGS}/g' \\"
+    echotab "    -e 's/\@CLISP_CHARSET\@/${CHARSET}/g' \\"
+    echotab "    -e 's/\@CLISP_NAME\@/\$(PACKAGE_NAME)/g' \\"
+    echotab "    -e 's/\@CLISP_VERSION\@/\$(PACKAGE_VERSION)/g' \\"
+    echotab "    ${SRCDIR}clisp.rc.in > clisp.rc"
     echol
   fi
   DRIVERFLAGS=''
