@@ -1,5 +1,10 @@
 2011-08-29  Sam Steingold  <sds@gnu.org>
 
+	* clisp.rc.in: extract from makemake.in
+	* makemake.in (clisp.rc): use it
+
+2011-08-29  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in (MODULE_CPPFLAGS_VAR): remove
 	(MODULE_CPPFLAGS): always define and use to avoid adding
 	${GNULIB_INCLUDE} to CPPFLAGS twice
